# PPOIS

lab1/: vector.cpp
lab1/BigInt/: BigInt.cpp  BigInt.h  BigIntTest.cpp  CMakeLists.txt
lab1/Vector/: CMakeLists.txt  Vector.cpp  VectorProgram.sh  VectorTest.cpp
lab1/vector/: CMakeLists.txt  VectorTest.cpp  vector.cpp  vector.h  vector_gtest.cpp
lab2/: README.md
lab2/include/: AnalyticsService.h  Architect.h  Blueprint.h  Budget.h  BudgetService.h  Building.h  BuildingMaterial.h  Client.h  ClientManagementService.h  ComplianceService.h  ConstructionCompany.h  ConstructionProject.h  ConstructionSite.h  ConstructionWorker.h  Contract.h  CostEstimate.h  DocumentManagementService.h  Door.h  ElectricalSystem.h  Elevator.h  Employee.h  Equipment.h  EquipmentFailureException.h  EquipmentMaintenanceService.h  Floor.h  Foundation.h  HRService.h  HVACSystem.h  InventoryService.h  MaterialOrderingService.h  MaterialShortageException.h  Milestone.h  Permit.h  PlumbingSystem.h  ProjectManager.h  ProjectPlan.h  QualityControlService.h  QualityStandard.h  QualityStandardNotMetException.h  ReportingService.h  (+12 more)
lab2/tests/: AnalyticsServiceTest.cpp  ArchitectTest.cpp  BlueprintTest.cpp  BudgetServiceTest.cpp  BudgetTest.cpp  BuildingMaterialTest.cpp  BuildingTest.cpp  ClientManagementServiceTest.cpp  (+43 more)
lab3/: CMakeLists.txt  README.md
lab3/include/: Ambulance.h  AnalyticsService.h  Appointment.h  AppointmentService.h  BedNotAvailableException.h  Billing.h  BillingException.h  BillingService.h  BloodTest.h  Cardiologist.h  ComplianceService.h  Diagnosis.h  Doctor.h  DoctorNotAvailableException.h  DoctorSchedulingService.h  EmergencyCase.h  EmergencyPriorityException.h  EmergencyService.h  Hospital.h  ICU.h  Insurance.h  InsuranceNotCoveredException.h  InsuranceService.h  LaboratoryService.h  LaboratoryTest.h  LaboratoryTestFailedException.h  MRI.h  MedicalDepartment.h  MedicalDevice.h  MedicalEquipment.h  MedicalEquipmentFailureException.h  MedicalRecord.h  MedicalRecordAccessException.h  MedicalRecordsService.h  Medication.h  MedicationNotAvailableException.h  MentalHealthTherapy.h  Neurologist.h  Nurse.h  OperatingRoom.h  (+22 more)
lab3/include/core/: ConstructionCompany.h  ProjectPlan.h  ResourceAllocation.h  RiskAssessment.h  Task.h
lab3/include/exceptions/: ClientPaymentDelayedException.h  InvalidBlueprintException.h  PermitNotGrantedException.h  ScheduleConflictException.h  WeatherConditionsException.h  WorkerNotQualifiedException.h
lab3/include/models/: Blueprint.h  Budget.h  Client.h  ConstructionWorker.h  Supplier.h
lab3/include/services/: ClientManagementService.h  HRService.h  ReportingService.h  SchedulingService.h
lab3/src/core/: Appointment.cpp  Billing.cpp  ConstructionCompany.cpp  Diagnosis.cpp  Doctor.cpp  EmergencyCase.cpp  Hospital.cpp  Insurance.cpp  LaboratoryTest.cpp  MedicalDepartment.cpp  MedicalEquipment.cpp  MedicalRecord.cpp  Medication.cpp  Nurse.cpp  Patient.cpp  Permit.cpp  Prescription.cpp  ProjectPlan.cpp  QualityStandard.cpp  RiskAssessment.cpp  SafetyProtocol.cpp  Surgery.cpp  Task.cpp  TreatmentPlan.cpp  Ward.cpp
lab3/src/exceptions/: BedNotAvailableException.cpp  BillingException.cpp  ClientPaymentDelayedException.cpp  DoctorNotAvailableException.cpp  EmergencyPriorityException.cpp  InsuranceNotCoveredException.cpp  LaboratoryTestFailedException.cpp  MedicalEquipmentFailureException.cpp  MedicalRecordAccessException.cpp  MedicationNotAvailableException.cpp  PatientNotFoundException.cpp  PermitNotGrantedException.cpp  PrescriptionInvalidException.cpp  QualityStandardNotMetException.cpp  ResourceAllocationException.cpp  SurgeryRiskException.cpp  WeatherConditionsException.cpp
lab3/src/models/: Ambulance.cpp  BloodTest.cpp  Blueprint.cpp  Budget.cpp  Cardiologist.cpp  ConstructionSite.cpp  Contract.cpp  Door.cpp  ElectricalSystem.cpp  Elevator.cpp  Equipment.cpp  Foundation.cpp  HVACSystem.cpp  ICU.cpp  MRI.cpp  MedicalDevice.cpp  MentalHealthTherapy.cpp  Neurologist.cpp  OperatingRoom.cpp  PatientRoom.cpp  Pediatrician.cpp  Pharmacy.cpp  PhysicalTherapist.cpp  PhysicalTherapy.cpp  PlumbingSystem.cpp  Radiologist.cpp  Rehabilitation.cpp  RehabilitationSpecialist.cpp  Roof.cpp  Supplier.cpp  Surgeon.cpp  Vaccine.cpp  Wall.cpp  Window.cpp  XRay.cpp
lab3/src/services/: AnalyticsService.cpp  AppointmentService.cpp  BillingService.cpp  BudgetService.cpp  ComplianceService.cpp  DoctorSchedulingService.cpp  DocumentManagementService.cpp  EmergencyService.cpp  InsuranceService.cpp  LaboratoryService.cpp  MedicalRecordsService.cpp  PatientManagementService.cpp  PharmacyService.cpp  ProjectManagementService.cpp  ReportingService.cpp  ResourceManagementService.cpp  WorkforceManagementService.cpp
lab3/tests/: AmbulanceTest.cpp  AnalyticsServiceTest.cpp  AppointmentServiceTest.cpp  AppointmentTest.cpp  BedNotAvailableExceptionTest.cpp  BillingExceptionTest.cpp  BillingServiceTest.cpp  BillingTest.cpp  BloodTestTest.cpp  BlueprintTest.cpp  BuildingMaterialTest.cpp  BuildingTest.cpp  CardiologistTest.cpp  ClientManagementServiceTest.cpp  ClientTest.cpp  ComplianceServiceTest.cpp  ConstructionProjectTest.cpp  ConstructionSiteTest.cpp  ConstructionWorkerTest.cpp  ContractTest.cpp  DiagnosisTest.cpp  DoctorNotAvailableExceptionTest.cpp  DoctorSchedulingServiceTest.cpp  DoctorTest.cpp  DocumentManagementServiceTest.cpp  ElectricalSystemTest.cpp  EmergencyCaseTest.cpp  EmergencyPriorityExceptionTest.cpp  EmergencyServiceTest.cpp  FloorTest.cpp  FoundationTest.cpp  HRServiceTest.cpp  HospitalTest.cpp  ICUTest.cpp  InsuranceNotCoveredExceptionTest.cpp  InsuranceServiceTest.cpp  InsuranceTest.cpp  InventoryServiceTest.cpp  LaboratoryServiceTest.cpp  LaboratoryTestFailedExceptionTest.cpp  (+51 more)
lab4/OrientedGraph/: CMakeLists.txt  IncidentIterator.h  OrientedGraph.h  OrientedGraphTest.cpp
lab4/OrientedGraph/iterators/: AdjacentIterator.h  EdgeIterator.h  IncidentIterator.h  VertexIterator.h
lab4/Sorting/: CMakeLists.txt
lab4/Sorting/CountingSort/: CountingSort.h  CountingSortTest.cpp  Product.h
lab4/Sorting/InsertionSort/: InsertionSort.h  InsertionSortTest.cpp  Student.h
(+88 files in other folders)
